--- a/.example.env
+++ b/.example.env
@@ -1,3 +1,5 @@
+REACT_APP_TERMINAL_VERSION= # Optional version of JB Terminal (e.g. 1, 1.1) defaults to latest
+
 REACT_APP_INFURA_ID= # Infura project id
 REACT_APP_INFURA_NETWORK= # Infura network (e.g. mainnet, rinkeby)
 
